--- a/template.yaml
+++ b/template.yaml
@@ -18,8 +18,8 @@ Resources:
   HelloWorldFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler
+      CodeUri: src/
+      Handler: lambda_function.lambda_handler
       Runtime: python3.8
       Architectures:
       - x86_64
